# coser-fastapi

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0911b4db9c73_create_companies_table.py  37eef88890fb_alter_users_table_create_user_roles.py  af03a85dfe3b_create_users_table.py
app/: main.py
app/auth/: router.py  schemas.py  service.py
app/companies/: models.py  router.py  schemas.py  service.py
app/core/: config.py  dependencies.py  exceptions.py  schemas.py  security.py
app/db/: base_model.py  session.py
app/users/: models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_auth.py  test_companies.py  test_users.py
