[project]
name = "coser-fastapi"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "python-jose[cryptography]",
    "bcrypt"
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]